Fixed skip link getting cut off in edge

--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -23,7 +23,7 @@ body {
         background-color: #fff;
         font-size: $font-l;
         font-weight: 600;
-        display: table-caption;
+        display: inline-block;
         padding: 1rem;
         white-space: nowrap;
         border: 2px dashed $green;
